2023-03-01 - 코드 리펙토링